# mcp-hyperautomation

./: .gitignore  README.md  configure_agents.py
agents/: INSTALLATION.MD  README.MD
agents/ASSETHANDLER_Agent/: Asset_Handler.json  README.md
agents/CASEMANAGER_Agent/: Case_Manager.json  README.md
agents/DB_Manager/: BigQuery.md  DB_Manager.json  README.md
agents/RO_MANAGER_Agent/: README.md  RO_Manager.json
agents/SDL_Agent/: README.md  SDL_Agent.json
agents/VT_Agent/: README.md  VT_Agent.json
server/: pyproject.toml  server.py
server/resources/: NL2PQL_prompt.txt
server/utils/: PQL_XLS_Reader.py  db_manager.py  fuzzy_logons.py  google_big_query_client.py
